syntax = "proto3";

option csharp_namespace = "Materal.APP.GrpcModel";

//字符串帮助服务
service StringHelper {
	//加密服务
	rpc DesEncryption (StringHandlerGrpcRequestModel) returns (StringHandlerGrpcResultModel);
	//解密服务
	rpc DesDecryption (StringHandlerGrpcRequestModel) returns (StringHandlerGrpcResultModel);
}
//字符串处理请求模型
message StringHandlerGrpcRequestModel {
	string Value = 1;
}
//字符串处理返回模型
message StringHandlerGrpcResultModel {
	int32 Status = 1;
	string Message = 2;
	string Value = 3;
}